src/objects/ReportSubscription__c.object
<CustomObject>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribed__c</fullName>
        <label>Subscribed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                    <default>true</default>
                    <label>Unsubscribed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ReportSubscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS- {0000}</displayFormat>
        <label>ReportSubscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReportSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>